# Collusion-Detection-system

./: .gitignore  DEPLOYMENT.md  FEATURE_ENGINEERING_COMPLETE.md  FILE_INDEX.md  LICENSE  QUICKSTART.md  README.md  START_HERE.md  anomaly_detection.py  app.py  config.py  data_auction_stats.csv  data_auctions.csv  data_bidder_stats.csv  data_bidders.csv  data_bids.csv  data_generator.py  feature_engineering.py  features_all.csv  features_metadata.csv  features_statistics.csv  main_pipeline.py  network_analysis.py  pyproject.toml  requirements.txt  risk_scoring.py  setup.py  test_demo.py  visualizations.py
