[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "collusion-detection"
version = "2.0.0"
description = "Machine learning system for detecting bidder collusion in coal e-auctions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["collusion", "detection", "machine-learning", "anomaly-detection", "auction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "networkx>=2.6.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "python-louvain>=0.15",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/CollusionDetection"
"Bug Tracker" = "https://github.com/yourusername/CollusionDetection/issues"
"Documentation" = "https://github.com/yourusername/CollusionDetection#readme"
"Source Code" = "https://github.com/yourusername/CollusionDetection"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pylint>=2.12",
    "flake8>=4.0",
    "black>=22.0",
    "isort>=5.10",
    "mypy>=0.950",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[tool.setuptools]
packages = ["collusion_detection"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
